--- a/package.json
+++ b/package.json
@@ -10,5 +10,25 @@
     "node": ">=18.0.0",
     "yarn": ">=1.22.0",
     "npm": "Please use Yarn as your package manager instead."
-  }
+  },
+  "scripts": {
+    "lint": "npx eslint --ignore-path .gitignore .",
+    "lint:fix": "npx eslint --fix --ignore-path .gitignore .",
+    "prettier": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache .",
+    "prettier:fix": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache ."
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {}
 }
