--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "author": "squxq <franciscotomas0430@gmail.com>",
   "license": "MIT",
   "private": true,
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.js",
   "engines": {
     "node": ">=18.0.0",
     "yarn": ">=1.22.0",
     "npm": "Please use Yarn as your package manager instead."
   },
   "scripts": {
+    "build": "tsup index.ts --format cjs,esm --dts",
     "lint": "npx eslint --ignore-path .gitignore .",
     "lint:fix": "npx eslint --fix --ignore-path .gitignore .",
     "prettier": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache .",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache .",
+    "typecheck": "tsc",
     "prepare": "husky install",
     "commitlint": "commitlint --from=HEAD"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.0.1",
@@ -31,6 +37,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
+    "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
