build: building and starting scripts with problem listing script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Debug TypeScript File",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/dist/index.js"
+      "program": "${workspaceFolder}/dist/${fileBasenameNoExtension}.js"
     }
   ]
 }
