--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "author": "squxq <franciscotomas0430@gmail.com>",
   "license": "MIT",
   "private": true,
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.js",
+  "main": "dist/problems.js",
+  "module": "dist/problems.mjs",
+  "types": "dist/problems.d.ts",
   "engines": {
     "node": ">=18.0.0",
     "yarn": ">=1.22.0",
     "npm": "Please use Yarn as your package manager instead."
   },
   "scripts": {
-    "build": "tsup index.ts --format cjs,esm --dts",
+    "start": "./scripts/start.sh",
+    "build": "tsup problems.ts --format cjs,esm --dts",
     "lint": "npx eslint --ignore-path .gitignore .",
     "lint:fix": "npx eslint --fix --ignore-path .gitignore .",
     "prettier": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache .",
