test: add testing and changing scripts

--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
   },
   "scripts": {
     "start": "./scripts/start.sh",
+    "test": "jest ${1}",
     "workflow": "./scripts/workflow.sh",
     "comments": "./scripts/comments.sh",
     "readme": "./scripts/readme.sh",
-    "build": "tsup ./problems --format cjs,esm --dts",
-    "lint": "npx eslint --ignore-path .gitignore .",
-    "lint:fix": "npx eslint --fix --ignore-path .gitignore .",
-    "prettier": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache .",
-    "prettier:fix": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache .",
-    "typecheck": "tsc",
+    "build": "tsup ${1:-'./problems'} --format cjs,esm --dts",
+    "lint": "npx eslint --ignore-path .gitignore ${1:-'.'}",
+    "lint:fix": "npx eslint --fix --ignore-path .gitignore ${1:-'.'}",
+    "prettier": "prettier --check ${1:-'**/*.{ts,tsx,mdx}'} --cache .",
+    "prettier:fix": "prettier --write ${1:-'**/*.{ts,tsx,mdx}'} --cache .",
+    "typecheck": "tsc --project tsconfig.json",
     "prepare": "husky install",
     "commitlint": "commitlint --from=HEAD",
-    "permissions": "chmod +x ./scripts/start.sh && chmod +x ./scripts/workflow.sh && chmod +x ./scripts/comments.sh && chmod +x ./scripts/readme.sh && chmod +x ./scripts/query_problem.sh"
+    "permissions": "chmod -R +x ./scripts/"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
+    "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.0.1",
@@ -41,7 +43,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.4",
     "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
