--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,5 +39,11 @@ jobs:
       - name: Install npm Modules
         run: yarn install
 
-      - name: Build Frontend
-        run: yarn build
+      - name: Lint
+        run: yarn lint
+
+      - name: Prettier
+        run: yarn prettier
+
+      - name: Type Check
+        run: yarn typecheck
